# teamtalk_websocket_server

./: .gitignore  CMakeLists.txt  LoginServConn.cpp  README.md  WebSocketConn.cpp  WebSocketConn.h  websocket_server.cpp  websocketserver.conf.example
websocket/: CMakeLists.txt  WebSocket.cpp  WebSocket.h
websocket/base64/: base64.cpp  base64.h
